tests/ui/parser/paamayim-nekudotayim.rs
// http://phpsadness.com/sad/1

fn main() {
    ::; //~ ERROR expected identifier, found `;`
}

// ferrocene-annotations: fls_9i5msiuuyihf
// Paths
//
// ferrocene-annotations: fls_40xoego2thsp
// Resolution
//
// ferrocene-annotations: fls_i6qzga6dyaee
// Path Resolution
